<resources>
    <!-- CONTENT DESCRIPTIONS -->
    <string name="app_name">whereshouldieat</string>
    <string name="add_location">Add Location</string>
    <string name="remove_location">Remove Location</string>
    <string name="choose_location">Choose Location</string>
    <!-- IN-APP STRINGS -->
    <string name="location_saved">Location added</string>
    <string name="location_deleted">Location removed</string>
    <string name="empty_not_saved">Empty location not added</string>
    <string name="empty_not_deleted">Empty location not deleted</string>
    <string name="locations_empty">No locations found</string>
    <string name="missing_location">Location doesn\'t exist</string>
    <string name="mango_time">mango time</string>
    <string name="type_of_food">type of food</string>
    <string name="all_hours">24 hours?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_category">Please choose a category</string>
    <string name="choose_hours">Please choose hours</string>
    <string name="choose_hours_and_category">Please choose hours and category</string>
    <string name="filter">filter</string>
    <string-array name="all_hours">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="categories">
        <item>Fast Food</item>
        <item>Restaurant</item>
        <item>Other</item>
    </string-array>
</resources>