<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AddLocationFragment"
    android:background="@color/light_purple">

    <TextView
        android:id="@+id/fragment_location_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mango_time"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        style="@style/LightTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/category_dropdown_outside"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/category_dropdown_outside"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:textColorHint="@color/light_blue"
        app:layout_constraintTop_toBottomOf="@+id/fragment_location_textview"
        app:layout_constraintBottom_toTopOf="@id/all_hours_outside"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:boxCornerRadiusBottomEnd="30dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu" >

        <AutoCompleteTextView
            android:id="@+id/category_dropdown_inside"
            android:hint="@string/type_of_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:inputType="none"
            android:backgroundTint="@color/dark_purple"
            style="@style/LightTheme" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/all_hours_outside"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:textColorHint="@color/light_blue"
        app:layout_constraintTop_toBottomOf="@+id/category_dropdown_outside"
        app:layout_constraintBottom_toTopOf="@id/fragment_submit_button"
        app:layout_constraintLeft_toLeftOf="@id/category_dropdown_outside"
        app:layout_constraintRight_toRightOf="@id/category_dropdown_outside"
        app:boxCornerRadiusBottomEnd="30dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:id="@+id/all_hours_inside"
            android:hint="@string/all_hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:inputType="none"
            android:backgroundTint="@color/dark_purple"
            style="@style/LightTheme" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_submit_button"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/add_location"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/dark_purple"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/category_dropdown_outside"
        app:layout_constraintRight_toRightOf="@id/category_dropdown_outside"
        app:cornerRadius="30dp" />
</androidx.constraintlayout.widget.ConstraintLayout>