<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/main_activity_layout">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        tools:listitem="@layout/recyclerview_item"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/add_location_button"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/delete_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:contentDescription="@string/remove_location"
        android:src="@drawable/ic_baseline_delete_24"
        app:backgroundTint="#ff5100"
        app:layout_constraintTop_toBottomOf="@id/recyclerview"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/add_location_button"
        app:layout_constraintBottom_toTopOf="@id/add_location_edittext_outside" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:contentDescription="@string/add_location"
        android:src="@drawable/ic_baseline_add_50"
        app:backgroundTint="#ff5100"
        app:layout_constraintTop_toBottomOf="@id/recyclerview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/add_location_edittext_outside" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/choose_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:contentDescription="@string/choose_location"
        android:src="@drawable/ic_baseline_auto_fix_high_24"
        app:backgroundTint="#ff5100"
        app:layout_constraintTop_toBottomOf="@id/recyclerview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/add_location_button"
        app:layout_constraintBottom_toTopOf="@id/add_location_edittext_outside" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_location_edittext_outside"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/add_location"
        android:inputType="text"
        android:textColor="@color/black"
        app:boxBackgroundColor="#0095cc"
        app:layout_constraintTop_toBottomOf="@id/add_location_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:hintEnabled="false"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_location_edittext_inside"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_location"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/add_location_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:elevation="20dp" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/filter_fragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:elevation="20dp" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/instruction_fragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/add_location_button" />
</androidx.constraintlayout.widget.ConstraintLayout>